--- a/templates/thing/login.html
+++ b/templates/thing/login.html
@@ -1,5 +1,5 @@
 <h1>Авторизация</h1>
-<form action = "/login/">
+<form action = "/login/" method = "post">{% csrf_token %}
     <label>
         Имя пользователя:
         <input type = "text" name="username"/>
